welcome.lessons.welcome.bat.bool2.ShareDigit.scala.error
shareDigit:7: error: type mismatch;
 found   : Unit
 required: Boolean
  if (z=h) {
       ^shareDigit:10: error: type mismatch;
 found   : Unit
 required: Boolean
  if (z=g) {
       ^shareDigit:13: error: type mismatch;
 found   : Unit
 required: Boolean
  if (y=h) {
       ^shareDigit:16: error: type mismatch;
 found   : Unit
 required: Boolean
  if (y=g) {
       ^